fix: scroll visibility

--- a/src/global.css
+++ b/src/global.css
@@ -6,6 +6,7 @@ html {
 
 body {
   margin: none;
+  overflow-y: scroll;
 }
 
 :root {
